--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "gufy/livechat-api",
     "description": "A simplified PHP Livechatinc API",
     "require": {
-        "guzzlehttp/guzzle": "~5"
+      "php": ">=5.4.0",
+      "guzzlehttp/guzzle": "~5"
     },
     "require-dev": {
         "phpunit/phpunit": "~4"
